Refactor sync lyric functionality: migrate `SyncLyric` to a dedicated class, consolidate logic, and reorganize packages for better code structure and maintainability.